--- a/Easy-Problems/03/进一步想法.md
+++ b/Easy-Problems/03/进一步想法.md
@@ -4,4 +4,4 @@
 
 # 若同时还需要知道重复次数呢？
 + 暴力解法以及哈希表方法，可以考虑采用map来存储重复数字和重复次数，基于数组的哈希方法直接就可以读出重复次数
-+ 置换方法在进行上面所说的操作后，重复的数字将全部聚集在数组后段，可从后往前找一直到满足索引等于值，遍历过程中用一个map记录重复数字以及次数
++ 置换方法在进行上面所说的操作后，所有索引不等于值的位置都是重复数字，O(n)复杂度再遍历一遍，保存结果即可。
